--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "homepage": "http://SagarGi.github.io/MyPortfolio",
   "name": "sagarportfolio",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
     "@fortawesome/free-brands-svg-icons": "^5.12.1",
