--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
+    "mdbreact": "^4.25.5",
     "prop-types": "^15.7.2",
+    "rc-footer": "^0.6.2",
     "react": "^16.12.0",
     "react-avatar": "^3.9.2",
     "react-bootstrap": "^1.0.0-beta.16",
