--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react": "^16.12.0",
     "react-avatar": "^3.9.2",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-dark-mode-toggle": "0.0.3",
+    "react-dark-theme": "^1.1.1",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0"
   },
